# KhinsiderDownloader

./: .gitignore  APP_VERSION  App.config  CMakeLists.txt  CONTRIBUTORS.xml  Form1.Designer.cs  Form1.cs  Form1.resx  KhinsiderDownloader.csproj  KhinsiderDownloader.sln  LICENSE  Program.cs  README.md  SearchForm.Designer.cs  SearchForm.cs  packages.config  resource.rc  resources.qrc  vcpkg.json
.github/workflows/: build.yml  linux-build.yml  windows-build.yml
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
scripts/linux/: deploy.sh
scripts/shared/: updateversion.py
scripts/windows/: build.bat  clean.bat  configure.bat  createInstaller.bat  deploy.bat  fullbuild.bat  installerinfo.iss  updateversion.bat
src/: App.cpp  App.h  ImagePrecache.cpp  ImagePrecache.h  LogController.cpp  LogController.h  main.cpp  main.h  maincontroller.cpp  maincontroller.h
src/downloader/: DownloadManager.cpp  DownloadManager.h  DownloadWorker.cpp  DownloadWorker.h  WDownloadReply.h
src/pages/about/: aboutcontroller.cpp  aboutcontroller.h
src/pages/download/: DownloaderController.cpp  DownloaderController.h  DownloaderModel.cpp  DownloaderModel.h
src/pages/search/: SearchAlbumInfoViewModel.h  SearchController.cpp  SearchController.h  SearchResultModel.h  SearchViewModel.cpp  SearchViewModel.h
src/pages/settings/: Settings.cpp  Settings.h  SettingsController.cpp  SettingsController.h  SettingsViewModel.h
src/parser/: Album.cpp  Album.h  HTMLParserHelper.cpp  HTMLParserHelper.h  KhinsiderParser.cpp  KhinsiderParser.h  Song.h
src/ui/: Main.qml
src/ui/about/: AboutPanel.qml
src/ui/download/: AlbumItem.qml  DownloadPanel.qml  DownloadSide.qml
src/ui/search/: AlbumImageCaret.qml  AlbumImageCaretButton.qml  AlbumInfoSide.qml  SearchPanel.qml  SearchResultsList.qml
src/ui/settings/: SettingsPanel.qml  UpdateCheckerDialog.qml
src/ui/shared/: SideButton.qml  WButton.qml  WEnumButton.qml  WNumberBox.qml  WNumberBoxButton.qml  WScrollView.qml
